# wgpu-demo

./: Cargo.toml  build.rs
res/: cylinder.mtl  plane.mtl  shierke.mtl  sphere.mtl  tree.mtl
src/: character_system.rs  light.wgsl  main.rs  render_system.rs  shader.wgsl
src/render_system/: camera.rs  character.wgsl  info_panel.rs  light.wgsl  mod.rs  model.rs  render_system.rs  resources.rs  shader.wgsl
