[package]
name = "wgpu-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.4", features = ["derive"] }
cfg-if = "1"
cgmath = { version = "0.18", features = ["swizzle"] }
env_logger = "0.9"
pollster = "0.2"
log = "0.4"
tobj = { version = "3.2", features = ["async"] }
wgpu = "0.13"
instant = "0.1"
winit = { version = "0.27.3", features = ["x11"] }

egui_wgpu_backend = "0.19"
egui = "0.19"
epi = "0.17"
egui_winit_platform = "0.16"
egui_extras = { version = "0.19.0", features = ["image"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
